docs: implemented documentation for user and social media on swaggo
