# handler/rest/userRestHandler.go
@@ -19,6 +19,15 @@ func NewUserRestHandler(userService service.UserService) *userRestHandler {
 	return &userRestHandler{userService: userService}
 }
 
+// Login godoc
+// @Tags users
+// @Description Login into your user account and get access token with jwt
+// @ID login-users
+// @Accept  json
+// @Produce json
+// @Param RequestBody body dto.LoginRequest true "Login request body json"
+// @Success 200 {object} dto.LoginResponse
+// @Router /users/login [post]
 func (u *userRestHandler) Login(c *gin.Context) {
 	var userRequest dto.LoginRequest
 	var err error
@@ -50,6 +59,15 @@ func (u *userRestHandler) Login(c *gin.Context) {
 	c.JSON(http.StatusCreated, token)
 }
 
+// Register godoc
+// @Tags users
+// @Description Register a new user
+// @ID register-users
+// @Accept  json
+// @Produce json
+// @Param RequestBody body dto.RegisterRequest true "Register request body json"
+// @Success 201 {object} dto.RegisterResponse
+// @Router /users/register [post]
 func (u *userRestHandler) Register(c *gin.Context) {
 	var userRequest dto.RegisterRequest
 	var err error
@@ -84,6 +102,16 @@ func (u *userRestHandler) Register(c *gin.Context) {
 	c.JSON(http.StatusCreated, successMessage)
 }
 
+// UpdateUserData godoc
+// @Tags users
+// @Description Update user data
+// @ID update-user-data
+// @Accept  json
+// @Produce json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Param RequestBody body dto.UpdateUserDataRequest true "Update user request body json"
+// @Success 200 {object} dto.UpdateUserDataResponse
+// @Router /users/ [put]
 func (u *userRestHandler) UpdateUserData(c *gin.Context) {
 	var updateUserDataRequest dto.UpdateUserDataRequest
 	var err error
@@ -126,6 +154,14 @@ func (u *userRestHandler) UpdateUserData(c *gin.Context) {
 	c.JSON(http.StatusOK, response)
 }
 
+// DeleteUserData godoc
+// @Tags users
+// @Description Delete user data
+// @ID delete-user
+// @Produce json
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Success 200 {object} dto.DeleteUserResponse
+// @Router /users/ [delete]
 func (u *userRestHandler) DeleteUser(c *gin.Context) {
 	var userData entity.User
 	if value, ok := c.MustGet("userData").(entity.User); !ok {
